[tool.poetry]
name = "pybitmsg"
version = "0.0.0"
description = ""
authors = ["vitalnodo <vitalnodo@outlook.com>"]
packages = [{ include = "pybitmsg" }]
include = [ 
    { path = "src/", format = "sdist" },  
    { path = "pybitmsg/*.so", format = "wheel" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core", "ziggy-pydust==0.23.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ziggy-pydust = "==0.23.1"

[tool.pydust]
self_managed = true